@startuml
'https://plantuml.com/class-diagram

abstract class Defensa {
    -coste: int
    +Defensa(Parcela : lugar)
    +atacar(Enemigo : enemigo)
    +construir()
}

class TorreBlanca{
    +atacar(Enemigo : enemigo): void
}

class TorrePlateada{
    +atacar(Enemigo : enemigo): void
}

interface Parcela {
    +ubicar(Defensa : defensa): void
}

class DefensaEnConstruccion{
    -turnosRestantes : int
    +DefensaEnConstruccion(int : turnos, Defensa : defensa)
    +atacar(Enemigo : enemigo) : Defensa
}

abstract class Enemigo {
    +recibirAtaque(Defensa : defensa): void
    +destruirse(): void
    +atacar(Jugador : jugador): void
}

class Jugador {
    +recibirAtaque(Enemigo: enemigo): void
    +sumarCreditos(int : cantidad): void
    +atacar(): void
    +VidaObtener() : int
    +restarCreditos(int creditos)
}

class sistemaDeAtaque{
    -daño: int
    -rango: int
    +SistemaDeAtaque(int daño, int rango)
    +atacar()
}

class turnosNecesarios{
    -turnosFaltantes: int
    +TurnosNecesarios(int turnos)
    +estaOperativa(): Bool
    +construir()
}

Defensa <|-- TorreBlanca
Defensa <|-- TorrePlateada
Defensa <..> Enemigo
Parcela o--> Defensa
Jugador  *--> "1..*" Defensa
Defensa <|-- DefensaEnConstruccion
Defensa *--> sistemaDeAtaque
Defensa *--> turnosNecesarios


@enduml